--- a/category-toasters.html
+++ b/category-toasters.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Категории</title>
-  <link rel="stylesheet" href="./css/style.css?_v=a94f23f908e60dc669a89779a5af7397">
+  <link rel="stylesheet" href="./css/style.css?_v=207da2643e0ed27b6a3504597faa1ca9">
 </head>
 
 <body>
@@ -346,14 +346,14 @@
     <header class="header" id="header">
   <div class="container">
     <div class="header__inner">
-      <a href="/" class="logo">
+      <a href="./" class="logo">
         <img src="./images/logo.png" alt="logo">
       </a>
 
       <nav class="nav header__nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="/category.html" class="nav__link">
+            <a href="./category.html" class="nav__link">
               Категории
               <svg class="icon icon--dropdown-arrow">
                 <use xlink:href="#dropdown-arrow"></use>
@@ -365,53 +365,53 @@
                   <div class="nav-box__item">
                     <h4>Отпариватели</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-90A.html">VOTAK VT-90A</a></li>
+                      <li><a href="./VOTAK_VT-90A.html">VOTAK VT-90A</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Фены для волос</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-80A.html">VOTAK VT-80А</a></li>
-                      <li><a href="/VOTAK_VT-80B.html">VOTAK VT-80В</a></li>
+                      <li><a href="./VOTAK_VT-80A.html">VOTAK VT-80А</a></li>
+                      <li><a href="./VOTAK_VT-80B.html">VOTAK VT-80В</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Кухонные миксеры</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-10A.html">VOTAK VT-10А</a></li>
-                      <li><a href="/VOTAK_VT-10B.html">VOTAK VT-10В</a></li>
+                      <li><a href="./VOTAK_VT-10A.html">VOTAK VT-10А</a></li>
+                      <li><a href="./VOTAK_VT-10B.html">VOTAK VT-10В</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Кофемашины</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-34.html">VOTAK VT-34</a></li>
-                      <li><a href="/VOTAK_VT-32.html">VOTAK VT-32</a></li>
+                      <li><a href="./VOTAK_VT-34.html">VOTAK VT-34</a></li>
+                      <li><a href="./VOTAK_VT-32.html">VOTAK VT-32</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Пылесосы</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-40C.html">VOTAK VT-40C</a></li>
-                      <li><a href="/VOTAK_VT-40B.html">VOTAK VT-40B</a></li>
+                      <li><a href="./VOTAK_VT-40C.html">VOTAK VT-40C</a></li>
+                      <li><a href="./VOTAK_VT-40B.html">VOTAK VT-40B</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Электрические печи</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-20B.html">VOTAK VT-20B</a></li>
+                      <li><a href="./VOTAK_VT-20B.html">VOTAK VT-20B</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Газовые печи</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-21A.html">VOTAK VT-21A</a></li>
+                      <li><a href="./VOTAK_VT-21A.html">VOTAK VT-21A</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Тостеры</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-68.html">VOTAK VT-68</a></li>
+                      <li><a href="./VOTAK_VT-68.html">VOTAK VT-68</a></li>
                     </ul>
                   </div>
                 </div>
@@ -490,15 +490,15 @@
         <div class="container">
           <div class="category-intro__inner">
             <ul class="breadcrumbs__list">
-              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная</a></li>
-              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/category.html">Категории</a></li>
+              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="./">Главная</a></li>
+              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="./category.html">Категории</a></li>
               <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="">Тостеры</a></li>
             </ul>
             <div class="category-intro__content">
               <div class="category-intro__content-item">
                 <img class="category-intro__content-img" src="./images/category/category-toasters.jpg" alt="category">
                 <h2 class="category-intro__title">Тостеры</h2>
-                <a class="btn btn--white" href="/VOTAK_VT-68.html">Подробнее</a>
+                <a class="btn btn--white" href="./VOTAK_VT-68.html">Подробнее</a>
               </div>
             </div>
             <div class="category-intro__links swiper category-intro__links-swiper">
@@ -530,7 +530,7 @@
                 <div class="cards__item-info">
                   <span class="cards__item-subtitle">Тостер</span>
                   <h3 class="cards__item-title">VOTAK VT-68</h3>
-                  <a class="btn btn--border" href="/VOTAK_VT-68.html">Подробнее</a>
+                  <a class="btn btn--border" href="./VOTAK_VT-68.html">Подробнее</a>
                 </div>
               </div>
       
@@ -543,13 +543,13 @@
   <div class="footer__wrapper">
     <div class="container">
       <div class="footer__inner">
-        <a href="/" class="logo">
+        <a href="./" class="logo">
           <img src="./images/logo.png" alt="logo">
         </a>
 
         <nav class="nav footer__nav">
           <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="/category.html">Категории</a></li>
+            <li class="nav__item"><a class="nav__link" href="./category.html">Категории</a></li>
             <li class="nav__item"><a class="nav__link" href="https://vk.com/votaktech" target="_blank">Поддержка</a>
             </li>
             <li class="nav__item">
@@ -651,8 +651,8 @@
     </div>
   </div>
 </div>
-  <script src="./js/libs.js?_v=a94f23f908e60dc669a89779a5af7397"></script>
-  <script src="./js/main.js?_v=a94f23f908e60dc669a89779a5af7397"></script>
+  <script src="./js/libs.js?_v=207da2643e0ed27b6a3504597faa1ca9"></script>
+  <script src="./js/main.js?_v=207da2643e0ed27b6a3504597faa1ca9"></script>
 </body>
 
 </html>
