--- a/category.html
+++ b/category.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Категории</title>
-  <link rel="stylesheet" href="./css/style.css?_v=a94f23f908e60dc669a89779a5af7397">
+  <link rel="stylesheet" href="./css/style.css?_v=207da2643e0ed27b6a3504597faa1ca9">
 </head>
 
 <body>
@@ -346,14 +346,14 @@
     <header class="header" id="header">
   <div class="container">
     <div class="header__inner">
-      <a href="/" class="logo">
+      <a href="./" class="logo">
         <img src="./images/logo.png" alt="logo">
       </a>
 
       <nav class="nav header__nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="/category.html" class="nav__link">
+            <a href="./category.html" class="nav__link">
               Категории
               <svg class="icon icon--dropdown-arrow">
                 <use xlink:href="#dropdown-arrow"></use>
@@ -365,53 +365,53 @@
                   <div class="nav-box__item">
                     <h4>Отпариватели</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-90A.html">VOTAK VT-90A</a></li>
+                      <li><a href="./VOTAK_VT-90A.html">VOTAK VT-90A</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Фены для волос</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-80A.html">VOTAK VT-80А</a></li>
-                      <li><a href="/VOTAK_VT-80B.html">VOTAK VT-80В</a></li>
+                      <li><a href="./VOTAK_VT-80A.html">VOTAK VT-80А</a></li>
+                      <li><a href="./VOTAK_VT-80B.html">VOTAK VT-80В</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Кухонные миксеры</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-10A.html">VOTAK VT-10А</a></li>
-                      <li><a href="/VOTAK_VT-10B.html">VOTAK VT-10В</a></li>
+                      <li><a href="./VOTAK_VT-10A.html">VOTAK VT-10А</a></li>
+                      <li><a href="./VOTAK_VT-10B.html">VOTAK VT-10В</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Кофемашины</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-34.html">VOTAK VT-34</a></li>
-                      <li><a href="/VOTAK_VT-32.html">VOTAK VT-32</a></li>
+                      <li><a href="./VOTAK_VT-34.html">VOTAK VT-34</a></li>
+                      <li><a href="./VOTAK_VT-32.html">VOTAK VT-32</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Пылесосы</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-40C.html">VOTAK VT-40C</a></li>
-                      <li><a href="/VOTAK_VT-40B.html">VOTAK VT-40B</a></li>
+                      <li><a href="./VOTAK_VT-40C.html">VOTAK VT-40C</a></li>
+                      <li><a href="./VOTAK_VT-40B.html">VOTAK VT-40B</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Электрические печи</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-20B.html">VOTAK VT-20B</a></li>
+                      <li><a href="./VOTAK_VT-20B.html">VOTAK VT-20B</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Газовые печи</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-21A.html">VOTAK VT-21A</a></li>
+                      <li><a href="./VOTAK_VT-21A.html">VOTAK VT-21A</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Тостеры</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-68.html">VOTAK VT-68</a></li>
+                      <li><a href="./VOTAK_VT-68.html">VOTAK VT-68</a></li>
                     </ul>
                   </div>
                 </div>
@@ -489,7 +489,7 @@
         <div class="container">
           <div class="breadcrumbs__inner">
             <ul class="breadcrumbs__list">
-              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная</a></li>
+              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="./">Главная</a></li>
               <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="">Категории</a></li>
               </li>
             </ul>
@@ -501,25 +501,25 @@
           <div class="cards__inner">
             <h2 class="cards__title">Категории</h2>
             <div class="categories__items">
-              <a class="categories__item" href="/category-steamers.html">
+              <a class="categories__item" href="./category-steamers.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-1.png" alt="categories">
                 </div>
                 <h3 class="categories__item-title">Отпариватели</h3>
               </a>
-              <a class="categories__item" href="/category-electric-furnaces.html">
+              <a class="categories__item" href="./category-electric-furnaces.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-2.png" alt="categories">
                 </div>
                 <h3 class="categories__item-title">Электрические печи</h3>
               </a>
-              <a class="categories__item" href="/category-gas-furnaces.html">
+              <a class="categories__item" href="./category-gas-furnaces.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-3.png" alt="categories">
                 </div>
                 <h3 class="categories__item-title">Газовые печи</h3>
               </a>
-              <a class="categories__item" href="/category-hairdryers.html">
+              <a class="categories__item" href="./category-hairdryers.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-4.png" alt="categories">
                 </div>
@@ -531,19 +531,19 @@
                 </div>
                 <h3 class="categories__item-title">пылесосы</h3>
               </a>
-              <a class="categories__item" href="/category-mixers.html">
+              <a class="categories__item" href="./category-mixers.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-6.png" alt="categories">
                 </div>
                 <h3 class="categories__item-title">кухонные миксеры</h3>
               </a>
-              <a class="categories__item" href="/category-coffee-machines.html">
+              <a class="categories__item" href="./category-coffee-machines.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-7.png" alt="categories">
                 </div>
                 <h3 class="categories__item-title">кофемашины</h3>
               </a>
-              <a class="categories__item" href="/category-toasters.html">
+              <a class="categories__item" href="./category-toasters.html">
                 <div class="categories__item-images">
                   <img class="categories__item-img" src="./images/categories/categories-8.png" alt="categories">
                 </div>
@@ -568,7 +568,7 @@
                 <div class="cards__item-info">
                   <span class="cards__item-subtitle">Вертикальный пылесос</span>
                   <h3 class="cards__item-title">VOTAK VT 40C</h3>
-                  <a class="btn btn--border" href="/VOTAK_VT-40C.html">Подробнее</a>
+                  <a class="btn btn--border" href="./VOTAK_VT-40C.html">Подробнее</a>
                 </div>
               </div>
               <div class="cards__item">
@@ -578,7 +578,7 @@
                 <div class="cards__item-info">
                   <span class="cards__item-subtitle">Фен для волос</span>
                   <h3 class="cards__item-title">VOTAK VT-80B</h3>
-                  <a class="btn btn--border" href="/VOTAK_VT-80B.html">Подробнее</a>
+                  <a class="btn btn--border" href="./VOTAK_VT-80B.html">Подробнее</a>
                 </div>
               </div>
               <div class="cards__item">
@@ -588,7 +588,7 @@
                 <div class="cards__item-info">
                   <span class="cards__item-subtitle">Кухонный миксер</span>
                   <h3 class="cards__item-title">VOTAK VT-10B</h3>
-                  <a class="btn btn--border" href="/VOTAK_VT-10B.html">Подробнее</a>
+                  <a class="btn btn--border" href="./VOTAK_VT-10B.html">Подробнее</a>
                 </div>
               </div>
               <div class="cards__item">
@@ -598,7 +598,7 @@
                 <div class="cards__item-info">
                   <span class="cards__item-subtitle">Кофемашина</span>
                   <h3 class="cards__item-title">VOTAK VT-34</h3>
-                  <a class="btn btn--border" href="/VOTAK_VT-34.html">Подробнее</a>
+                  <a class="btn btn--border" href="./VOTAK_VT-34.html">Подробнее</a>
                 </div>
               </div>
 
@@ -611,13 +611,13 @@
   <div class="footer__wrapper">
     <div class="container">
       <div class="footer__inner">
-        <a href="/" class="logo">
+        <a href="./" class="logo">
           <img src="./images/logo.png" alt="logo">
         </a>
 
         <nav class="nav footer__nav">
           <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="/category.html">Категории</a></li>
+            <li class="nav__item"><a class="nav__link" href="./category.html">Категории</a></li>
             <li class="nav__item"><a class="nav__link" href="https://vk.com/votaktech" target="_blank">Поддержка</a>
             </li>
             <li class="nav__item">
@@ -719,8 +719,8 @@
     </div>
   </div>
 </div>
-  <script src="./js/libs.js?_v=a94f23f908e60dc669a89779a5af7397"></script>
-  <script src="./js/main.js?_v=a94f23f908e60dc669a89779a5af7397"></script>
+  <script src="./js/libs.js?_v=207da2643e0ed27b6a3504597faa1ca9"></script>
+  <script src="./js/main.js?_v=207da2643e0ed27b6a3504597faa1ca9"></script>
 </body>
 
 </html>
