--- a/VOTAK_VT-10A.html
+++ b/VOTAK_VT-10A.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VOTAK VT-10A</title>
-  <link rel="stylesheet" href="./css/style.css?_v=a94f23f908e60dc669a89779a5af7397">
+  <link rel="stylesheet" href="./css/style.css?_v=207da2643e0ed27b6a3504597faa1ca9">
 </head>
 
 <body>
@@ -346,14 +346,14 @@
     <header class="header" id="header">
   <div class="container">
     <div class="header__inner">
-      <a href="/" class="logo">
+      <a href="./" class="logo">
         <img src="./images/logo.png" alt="logo">
       </a>
 
       <nav class="nav header__nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="/category.html" class="nav__link">
+            <a href="./category.html" class="nav__link">
               Категории
               <svg class="icon icon--dropdown-arrow">
                 <use xlink:href="#dropdown-arrow"></use>
@@ -365,53 +365,53 @@
                   <div class="nav-box__item">
                     <h4>Отпариватели</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-90A.html">VOTAK VT-90A</a></li>
+                      <li><a href="./VOTAK_VT-90A.html">VOTAK VT-90A</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Фены для волос</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-80A.html">VOTAK VT-80А</a></li>
-                      <li><a href="/VOTAK_VT-80B.html">VOTAK VT-80В</a></li>
+                      <li><a href="./VOTAK_VT-80A.html">VOTAK VT-80А</a></li>
+                      <li><a href="./VOTAK_VT-80B.html">VOTAK VT-80В</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Кухонные миксеры</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-10A.html">VOTAK VT-10А</a></li>
-                      <li><a href="/VOTAK_VT-10B.html">VOTAK VT-10В</a></li>
+                      <li><a href="./VOTAK_VT-10A.html">VOTAK VT-10А</a></li>
+                      <li><a href="./VOTAK_VT-10B.html">VOTAK VT-10В</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Кофемашины</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-34.html">VOTAK VT-34</a></li>
-                      <li><a href="/VOTAK_VT-32.html">VOTAK VT-32</a></li>
+                      <li><a href="./VOTAK_VT-34.html">VOTAK VT-34</a></li>
+                      <li><a href="./VOTAK_VT-32.html">VOTAK VT-32</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Пылесосы</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-40C.html">VOTAK VT-40C</a></li>
-                      <li><a href="/VOTAK_VT-40B.html">VOTAK VT-40B</a></li>
+                      <li><a href="./VOTAK_VT-40C.html">VOTAK VT-40C</a></li>
+                      <li><a href="./VOTAK_VT-40B.html">VOTAK VT-40B</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Электрические печи</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-20B.html">VOTAK VT-20B</a></li>
+                      <li><a href="./VOTAK_VT-20B.html">VOTAK VT-20B</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Газовые печи</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-21A.html">VOTAK VT-21A</a></li>
+                      <li><a href="./VOTAK_VT-21A.html">VOTAK VT-21A</a></li>
                     </ul>
                   </div>
                   <div class="nav-box__item">
                     <h4>Тостеры</h4>
                     <ul>
-                      <li><a href="/VOTAK_VT-68.html">VOTAK VT-68</a></li>
+                      <li><a href="./VOTAK_VT-68.html">VOTAK VT-68</a></li>
                     </ul>
                   </div>
                 </div>
@@ -489,9 +489,9 @@
         <div class="container">
           <div class="breadcrumbs__inner">
             <ul class="breadcrumbs__list">
-              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная</a></li>
-              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/category.html">Категории</a></li>
-              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/category-mixers.html">Кухонные
+              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="./">Главная</a></li>
+              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="./category.html">Категории</a></li>
+              <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="./category-mixers.html">Кухонные
                   миксеры</a></li>
               <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="">VOTAK VT-10A</a></li>
             </ul>
@@ -837,7 +837,7 @@
             <h2 class="title">Где купить</h2>
             <div class="buy__content">
               <span class="buy__content-title">Ozon.ru</span>
-              <a class="buy__content-link" href="/">Официальный интернет-магазин</a>
+              <a class="buy__content-link" href="./">Официальный интернет-магазин</a>
               <a class="btn btn--blue" target="_blank" href="https://ozon.ru/t/D05P9r">
                 Купить на
                 <img src="./images/icons/ozon.png" alt="ozon">
@@ -851,13 +851,13 @@
   <div class="footer__wrapper">
     <div class="container">
       <div class="footer__inner">
-        <a href="/" class="logo">
+        <a href="./" class="logo">
           <img src="./images/logo.png" alt="logo">
         </a>
 
         <nav class="nav footer__nav">
           <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="/category.html">Категории</a></li>
+            <li class="nav__item"><a class="nav__link" href="./category.html">Категории</a></li>
             <li class="nav__item"><a class="nav__link" href="https://vk.com/votaktech" target="_blank">Поддержка</a>
             </li>
             <li class="nav__item">
@@ -959,8 +959,8 @@
     </div>
   </div>
 </div>
-  <script src="./js/libs.js?_v=a94f23f908e60dc669a89779a5af7397"></script>
-  <script src="./js/main.js?_v=a94f23f908e60dc669a89779a5af7397"></script>
+  <script src="./js/libs.js?_v=207da2643e0ed27b6a3504597faa1ca9"></script>
+  <script src="./js/main.js?_v=207da2643e0ed27b6a3504597faa1ca9"></script>
 </body>
 
 </html>
